// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CloudConnectorButton render no cloud connector 1`] = `
<Button
  onClick={[MockFunction]}
  variant="secondary"
>
  Configure Cloud Connector
</Button>
`;

exports[`CloudConnectorButton render pending connector 1`] = `
<Popover
  aria-label="Popover with Link to cloud connector job"
  bodyContent={
    <div>
      Cloud connector setup is in progress now: 
      <a
        href="/job-link"
        rel="noopener noreferrer"
        target="_blank"
      >
        Cloud connector job link
      </a>
    </div>
  }
  closeBtnAriaLabel="Close cloud connector Popover"
>
  <Button
    variant="secondary"
  >
    <Spinner
      size="sm"
    />
     
    Cloud Connector is in progress
  </Button>
</Popover>
`;

exports[`CloudConnectorButton render resolved cloud connector 1`] = `
<Button
  onClick={[MockFunction]}
  variant="secondary"
>
  Reconfigure Cloud Connector
</Button>
`;
